Add ability to sort reviews in the list.
sort <SORT_ORDER> /by <SORT_CRITERION>

default: sort DESCENDING /by OVERALL_SCORE
available SORT_ORDER:
ASCENDING
DESCENDING

available SORT_CRITERION:
OVERALL_SCORE
FOOD_SCORE
CLEANLINESS_SCORE
SERVICE_SCORE
TAG_COUNT

all sort arguments support partial matching
ASC -> ASCENDING
food -> FOOD_SCORE etc.